crates/ic-lint/tests/snapshots/duplicate_methods__duplicate_method_conflict_params.snap
---
source: crates/ic-lint/tests/duplicate_methods.rs
expression: test_lint_hir(source)
---
error[duplicate-name]: interface `Derived` defines method `method` which conflicts with inherited method
   ┌ test.idl:7:10
   │
 2 │ interface Base {
 3 │     void method(in long x);
   ·          ^^^^^^ inherited from `Base`
 4 │ };
 5 │ 
 6 │ interface Derived : Base {
 7 │     void method(in string x);  // Error: conflicting parameter type
   ·          ^^^^^^ conflicting method definition
 8 │ };
   └──
 note: method names are case-insensitive
