crates/ic-lint/tests/snapshots/duplicate_methods__duplicate_method_conflict_types.snap
---
source: crates/ic-lint/tests/duplicate_methods.rs
expression: test_lint_hir(source)
---
⨯ duplicate-name: interface `Derived` defines method `method` which conflicts with inherited method
  @ test.idl:7:10

 2 │ interface Base {
 3 │     void method();
   │          ˆˆˆˆˆˆ inherited from `Base`
 4 │ };
 5 │ 
 6 │ interface Derived : Base {
 7 │     long method();  // Error: conflicting return type
   │          ˆˆˆˆˆˆ conflicting method definition
 8 │ };

  * method names are case-insensitive
