crates/ic-lint/tests/snapshots/duplicate_methods__duplicate_method_direct.snap
---
source: crates/ic-lint/tests/duplicate_methods.rs
expression: test_lint_hir(source)
---
error[duplicate_name]: interface `Derived` defines method `method` which conflicts with inherited method
   ┌ test.idl:7:10
   │
 7 │     void method();  // Error: conflicts with inherited method
   ·          ^^^^^^ conflicting method definition
 3 │     void method();
   ·          ^^^^^^ inherited from `Base`
   └──
 note: method names are case-insensitive
