crates/ic-lint/tests/snapshots/duplicate_methods__duplicate_method_forward_decl.snap
---
source: crates/ic-lint/tests/duplicate_methods.rs
expression: test_lint_hir(source)
---
error: interface `Derived` defines method `method` which conflicts with inherited method
    ┌ test.idl:10:10
    │
 10 │     long method();  // Error: conflicts with inherited method
    ·          ^^^^^^ conflicting method definition
  6 │     void method();
    ·          ^^^^^^ inherited from `Base`
    └──
