crates/ic-lint/tests/snapshots/duplicate_methods__duplicate_method_indirect_inheritance.snap
---
source: crates/ic-lint/tests/duplicate_methods.rs
expression: test_lint_hir(source)
---
error[duplicate_methods]: interface `Derived` defines method `method` which conflicts with inherited method
    ┌ test.idl:10:10
    │
 10 │     long method();  // Error: conflicts with method from Base
    ·          ^^^^^^ conflicting method definition
  3 │     void method();
    ·          ^^^^^^ inherited from `Base`
    └──
 note: method names are case-insensitive
