crates/ic-lint/tests/snapshots/duplicate_methods__duplicate_method_same_interface.snap
---
source: crates/ic-lint/tests/duplicate_methods.rs
expression: test_lint_hir(source)
---
error[duplicate_name]: duplicate method `method` in method 'Test'
   ┌ test.idl:4:10
   │
 2 │ interface Test {
 3 │     void method();
   ·          ^^^^^^ first defined here
 4 │     long method();  // Should be caught by validate.rs, not this lint
   ·          ^^^^^^ duplicate method
 5 │ };
   └──
 note: names are case-insensitive
